Update addon.xml and changelog for release

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,19 @@
+[B]1.3.0[/B]
+Jarvis Release
+
+- Changes require to make skin compatible with Kodi Jarvis.
+- Minor bug fixes.
+- Add support to skin for image resource loader script, weather fanart and icons now handled by this script.
+- Changes to now playing media shown on Horizontal and Icon home menu. Now shown as a Icon on shelf, 
+  as a result I can now show an additional menu item on the Horizontal Home menu.
+- In addition to Jarvis requirements to show new AudioDSP settings and manager dialogs have included the 
+  skin files for the AudioDSP addons as well.
+- Add and update a number of skin image files.
+- Simplified background image handling due to the use of skin.helper script.
+- Update language files from Transifex.
+
+[B]1.2.2[/B] Fix for changed author string requirements in addon.xml file 
+
 [B]1.2.1[/B]
  - Major refactor of Weather screens.
  - Moved Now playing items to shelf on horizontal and icons home menus. Now able to show six menu items in each
