Update change log to show repo required changes
Due to an error in the Kodi repo scripts themes in recent skins were not being saved to the correct location. Version bump on skin to ensure Kodi repo correctly builds skin for inclusion to Kodi repo

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]1.2.3[/B]
+- version bump due to issue with Kodi repo and theme files.
+
+[B]1.2.2[/B]
+- changes to Author naming to comply with new seperator requirements.
+
 [B]1.2.1[/B]
  - Major refactor of Weather screens.
  - Moved Now playing items to shelf on horizontal and icons home menus. Now able to show six menu items in each
