Kick off new round of skin updates

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,11 @@
+[B]1.3.3[/B]
+- various code cleanups.
+
 [B]1.3.2[/B]
 - version bump due to issue with Kodi repo and theme files.
 - various code cleanups.
 - number of changes to make theming skin easier.
-- new flatelite theme, sort of in the style of AppleTV gen 4 home screen.
+- new flatlite theme, sort of in the style of AppleTV gen 4 home screen.
 
 [B]1.3.1[/B]
 - changes to Author naming to comply with new seperator requirements.
@@ -20,6 +23,9 @@ Jarvis Release
 - Add and update a number of skin image files.
 - Simplified background image handling due to the use of skin.helper script.
 - Update language files from Transifex.
+
+[B]1.2.3[/B] Isengard update
+- version bump due to issue with Kodi repo and theme files.
 
 [B]1.2.2[/B] Fix for changed author string requirements in addon.xml file 
 
