Update English strings to make Home shortcut handling more obvious

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -329,7 +329,7 @@ msgid "Set location to enter Broadcast Radio library when Radio item selected on
 msgstr ""
 
 msgctxt "#31360"
-msgid "Sub menu to assign custom favourites to menu items."
+msgid "Sub menu to assign custom favourites to home menu items."
 msgstr ""
 
 msgctxt "#31370"
@@ -640,7 +640,7 @@ msgid "Media Entry Points"
 msgstr ""
 
 msgctxt "#31806"
-msgid "Custom Favourites"
+msgid "Home Shortcuts"
 msgstr ""
 
 msgctxt "#31807"
@@ -777,7 +777,9 @@ msgctxt "#31886"
 msgid "Tilt icons"
 msgstr ""
 
-#empty string id 31887
+msgctxt "#31887"
+msgid "Add to home screen"
+msgstr ""
 
 msgctxt "#31888"
 msgid "Time on Home screen"
