String changes for new way to assign home shortcuts

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -329,7 +329,7 @@ msgid "Set location to enter Broadcast Radio library when Radio item selected on
 msgstr ""
 
 msgctxt "#31360"
-msgid "Sub menu to assign custom favourites to home menu items."
+msgid "Sub menu to assign custom shortcuts to home menu items."
 msgstr ""
 
 msgctxt "#31370"
@@ -346,6 +346,10 @@ msgstr ""
 
 msgctxt "#31373"
 msgid "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
+msgstr ""
+
+msgctxt "#31374"
+msgid "Click shortcut button to assign home screen shortcut."
 msgstr ""
 
 #End Skin Help Setting strings
@@ -649,6 +653,10 @@ msgstr ""
 
 msgctxt "#31808"
 msgid "Home Screen"
+msgstr ""
+
+msgctxt "#31809"
+msgid "Shortcut"
 msgstr ""
 
 #empty strings from id 31809 to 31850
