--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,16 @@
 [B]1.3.3[/B]
-- various code cleanups.
+- Added new method to assign home menu shortcuts, now directly available from context menu.
+  Old method is still available, but context menu will be a lot quicker and more intuitive.
+- Due to changes to screen background image handling, cost in terms of memory and speed are almost
+  identical to skin default background image.  As such fanart and extra fanart backgrounds will
+  now default to on. There should be no need to, but user can turn off in skin settings if they choose.
+- Image preload has changed from 2 to 4 and as a result various views should now be noticably quicker.
+  Have also taken the opertunity to cleanup layout of a number of views (banner view in particular).
+- Extended usage of hidden screen focused controls indicator to most of the rest of the skin.  Shows
+  user if there is a hidden settings menu and/or scrollbars available for the screen.
+- Continue to standarise the look and layout of various skin elements. A number of script screens now
+  more closely follow the look and feel of default skin elements.  Work ongoing.  
+- Various code cleanups.
 
 [B]1.3.2[/B]
 - version bump due to issue with Kodi repo and theme files.
