--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-[B]1.3.3[/B]
+[B]1.3.5[/B]
 - Added new method to assign home menu shortcuts, now directly available from context menu.
   Old method is still available, but context menu will be a lot quicker and more intuitive.
 - Due to changes to screen background image handling, cost in terms of memory and speed are almost
@@ -9,7 +9,10 @@
 - Extended usage of hidden screen focused controls indicator to most of the rest of the skin.  Shows
   user if there is a hidden settings menu and/or scrollbars available for the screen.
 - Continue to standarise the look and layout of various skin elements. A number of script screens now
-  more closely follow the look and feel of default skin elements.  Work ongoing.  
+  more closely follow the look and feel of default skin elements.  Work ongoing.
+- Change a number of dialog layouts to look more like dialogs and not screens as they previously were.
+  In particular the Addons setting screen now looks like a dialog and not a screen as the behaviour of 
+  this dialog is different to the skin and Kodi settings screens, so this change should clue the user to the diffence.
 - Various code cleanups.
 
 [B]1.3.2[/B]
