Changes to allow custom Genre and Studio icons.
Currently only available in some views.

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -761,7 +761,13 @@ msgctxt "#31877"
 msgid "Never"
 msgstr ""
 
-#empty strings 31878 to 31879
+msgctxt "#31878"
+msgid "Studio icons"
+msgstr ""
+
+msgctxt "#31879"
+msgid "Genre icons"
+msgstr ""
 
 msgctxt "#31880"
 msgid "Lock Screen settings menus"
