Update Changelog in preparation for version 1.3.5 skin pull

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@
   identical to skin default background image.  As such fanart and extra fanart backgrounds will
   now default to on. There should be no need to, but user can turn off in skin settings if they choose.
 - Image preload has changed from 2 to 4 and as a result various views should now be noticably quicker.
-  Have also taken the opertunity to cleanup layout of a number of views (banner view in particular).
+  Have also taken the opertunity to cleanup layout of numerous views.
 - Extended usage of hidden screen focused controls indicator to most of the rest of the skin.  Shows
   user if there is a hidden settings menu and/or scrollbars available for the screen.
 - Continue to standarise the look and layout of various skin elements. A number of script screens now
