Minor changes to a number of skin strings

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -213,7 +213,7 @@ msgstr ""
 #empty string id 312320 reserved for future use.
 
 msgctxt "#31321"
-msgid "Type of Home menu type to use on home menu screen."
+msgid "Type of Home menu to use on home menu screen."
 msgstr ""
 
 msgctxt "#31322"
@@ -662,16 +662,14 @@ msgstr ""
 #empty strings from id 31809 to 31850
 
 msgctxt "#31851"
-msgid "Intro file:"
+msgid "Intro file"
 msgstr ""
 
 msgctxt "#31852"
 msgid "Use Startup playlist"
 msgstr ""
 
-msgctxt "#31853"
-msgid "Choose playlist:"
-msgstr ""
+#empty string 31853
 
 msgctxt "#31854"
 msgid "Startup screen"
