Add a number of missing strings to language file

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -274,7 +274,11 @@ msgctxt "#31337"
 msgid "Select action of Quit home menu item in home menu screen."
 msgstr ""
 
-#empty strings id 312338 to 31339 reserved for future use.
+msgctxt "#31338"
+msgid "Show 'Filemanager' item in home menu."
+msgstr ""
+
+#empty strings id 312339 reserved for future use.
 
 msgctxt "#31340"
 msgid "Location of custom skin background image."
@@ -659,7 +663,31 @@ msgctxt "#31809"
 msgid "Shortcut"
 msgstr ""
 
-#empty strings from id 31809 to 31850
+msgctxt "#31810"
+msgid "sec"
+msgstr ""
+
+msgctxt "#31811"
+msgid "Second"
+msgstr ""
+
+msgctxt "#31812"
+msgid "Seconds"
+msgstr ""
+
+msgctxt "#31813"
+msgid "Minute"
+msgstr ""
+
+msgctxt "#31814"
+msgid "Minutes"
+msgstr ""
+
+msgctxt "#31815"
+msgid "Never show"
+msgstr ""
+
+#empty strings from id 31816 to 31850
 
 msgctxt "#31851"
 msgid "Intro file"
@@ -783,7 +811,11 @@ msgctxt "#31883"
 msgid "Use media overlays"
 msgstr ""
 
-#empty strings from id 31884 to 31885
+#empty string id 31884
+
+msgctxt "#31885"
+msgid "Idle animation delay"
+msgstr ""
 
 msgctxt "#31886"
 msgid "Tilt icons"
@@ -873,7 +905,11 @@ msgctxt "#31914"
 msgid "Quit button action"
 msgstr ""
 
-#empty strings from id 31915 31919
+msgctxt "#31915"
+msgid "Filemanager in Home menu"
+msgstr ""
+
+#empty strings from id 31916 to 31919
 
 msgctxt "#31920"
 msgid "Movie library entry point"
