--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+[B]1.3.7[/B]
+- Major refactor of skin settings menus. Have now removed fake Spin controls from skin settings menu,
+  replaced with a selection dialog instead.
+- Add option to change time before idle animation appears in video list view to screen settings menu.
+- Various changes to allow FlatLite theme to take on a more AppleTV Gen 4 look.
+- Various tweaks to Home shelf to allow a more AppleTV Gen 4 look in the FlatLite theme.
+- Renamed the System menu to Settings as this name more correctly matches the actual function of the menu.
+- Removed Filemanager from System menu and added an option to diaplay on home menu.
+- Numerous minor code cleanups and bug fixes.
+
 [B]1.3.5[/B]
 - Added new method to assign home menu shortcuts, now directly available from context menu.
   Old method is still available, but context menu will be a lot quicker and more intuitive.
