--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -172,7 +172,11 @@ msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr ""
 
-#empty strings from id 31309 to 31310
+msgctxt "#31309"
+msgid "Letterbar allows user to click first letter of media item name to navigate to library starting at clicked letter. Sorry, English only."
+msgstr ""
+
+#empty string 31310
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -811,7 +815,10 @@ msgctxt "#31883"
 msgid "Use media overlays"
 msgstr ""
 
-#empty string id 31884
+msgctxt "#31884"
+msgid "Use letterbar"
+msgstr ""
+
 
 msgctxt "#31885"
 msgid "Idle animation delay"
