Add setting to hide touch controls

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -176,7 +176,9 @@ msgctxt "#31309"
 msgid "Letterbar allows user to click first letter of media item name to navigate to library starting at clicked letter. Sorry, English only."
 msgstr ""
 
-#empty string 31310
+msgctxt "#31310"
+msgid "Display touch/mouse controls if Kodi running on a touch/mouse enabled system."
+msgstr ""
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -819,7 +821,6 @@ msgctxt "#31884"
 msgid "Use letterbar"
 msgstr ""
 
-
 msgctxt "#31885"
 msgid "Idle animation delay"
 msgstr ""
@@ -840,7 +841,11 @@ msgctxt "#31889"
 msgid "Current weather on Home screen"
 msgstr ""
 
-#empty strings from id 31890 to 31891
+msgctxt "#31890"
+msgid "Show touch/mouse controls"
+msgstr ""
+
+#empty strings id 31891
 
 msgctxt "#31892"
 msgid "Use TV Tunes"
