Changes for animated backgrounds and posters

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,9 +5,10 @@
 - Various changes to allow FlatLite theme to take on a more AppleTV Gen 4 look.
 - Various tweaks to Home shelf to allow a more AppleTV Gen 4 look in the FlatLite theme.
 - Renamed the System menu to Settings as this name more correctly matches the actual function of the menu.
-- Removed Filemanager from System menu and added an option to diaplay on home menu.
+- Removed Filemanager from System menu and added an option to display on home menu.
 - Added a option to navigate in media views via a letter bar. Clicking the letter in the bar should move the focus to the media
   items with the selected first letter in there names.
+- Support for animated Posters and backgrounds in Video library Movie node.
 - Numerous minor code cleanups and bug fixes.
 
 [B]1.3.5[/B]
