--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -755,7 +755,9 @@ msgctxt "#31866"
 msgid "Weather backgrounds"
 msgstr ""
 
-#empty string 31867
+msgctxt "#31867"
+msgid "Use Animated Artwork"
+msgstr ""
 
 msgctxt "#31868"
 msgid "Background visibilty"
