--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@
 - Added a option to navigate in media views via a letter bar. Clicking the letter in the bar should move the focus to the media
   items with the selected first letter in there names.
 - Support for animated Posters and backgrounds in Video library Movie node.
+- Added numeric unwatched indictors (red dot with number inside) in various places thruout the skin. 
 - Numerous minor code cleanups and bug fixes.
 
 [B]1.3.5[/B]
