--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -654,7 +654,7 @@ msgid "Media Entry Points"
 msgstr ""
 
 msgctxt "#31806"
-msgid "Home Shortcuts"
+msgid "Home Customization"
 msgstr ""
 
 msgctxt "#31807"
