Change names of English strings files to use new naming scheme

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -105,19 +105,13 @@ msgstr ""
 #End video strings
 #Start music strings 31226 -31300
 
-msgctxt "#31226"
-msgid "CDDB"
-msgstr ""
+#empty string with id 31226
 
 msgctxt "#31227"
 msgid "Playlist Editor"
 msgstr ""
 
-#empty string with id 31228
-
-msgctxt "#31229"
-msgid "Rating"
-msgstr ""
+#empty strings from id 31228 to 31229
 
 msgctxt "#31230"
 msgid "Artist:"
@@ -372,11 +366,7 @@ msgctxt "#31528"
 msgid "Currently"
 msgstr ""
 
-#empty string id 31529
-
-msgctxt "#31530"
-msgid "Location"
-msgstr ""
+#empty strings from 31529 to 31530
 
 msgctxt "#31531"
 msgid "Last Updated"
@@ -389,6 +379,7 @@ msgid "Provider"
 msgstr ""
 
 #empty strings from id 31537 to 31550
+
 #End weather strings
 #Start system strings 31551 - 31650
 
