--- a/language/resource.language.en_us/strings.po
+++ b/language/resource.language.en_us/strings.po
@@ -88,17 +88,9 @@ msgctxt "#31135"
 msgid "Details"
 msgstr "Details"
 
-msgctxt "#31226"
-msgid "CDDB"
-msgstr "CDDB"
-
 msgctxt "#31227"
 msgid "Playlist Editor"
 msgstr "Playlist Editor"
-
-msgctxt "#31229"
-msgid "Rating"
-msgstr "Rating"
 
 msgctxt "#31230"
 msgid "Artist:"
@@ -185,8 +177,8 @@ msgid "Type of image(s) to use on Add-ons shelf (On Horizontal or Icon menu type
 msgstr "Type of image(s) to use on Add-ons shelf (On Horizontal or Icon menu type only)."
 
 msgctxt "#31321"
-msgid "Type of Home menu type to use on home menu screen."
-msgstr "Type of Home menu type to use on home menu screen."
+msgid "Type of Home menu to use on home menu screen."
+msgstr "Type of Home menu to use on home menu screen."
 
 msgctxt "#31322"
 msgid "Show 'Videos' item in home menu."
@@ -297,8 +289,8 @@ msgid "Set location to enter Broadcast Radio library when Radio item selected on
 msgstr "Set location to enter Broadcast Radio library when Radio item selected on home menu screen."
 
 msgctxt "#31360"
-msgid "Sub menu to assign custom favourites to menu items."
-msgstr "Sub menu to assign custom favorites to menu items."
+msgid "Sub menu to assign custom shortcuts to home menu items."
+msgstr "Sub menu to assign custom shortcuts to home menu items."
 
 msgctxt "#31370"
 msgid "Use Debug log uploader script to post a debug log ('Full' debug logging must be turned on before log can be posted)."
@@ -319,10 +311,6 @@ msgstr "Turn on debug info overlay to help users identify currently displayed wi
 msgctxt "#31528"
 msgid "Currently"
 msgstr "Currently"
-
-msgctxt "#31530"
-msgid "Location"
-msgstr "Location"
 
 msgctxt "#31531"
 msgid "Last Updated"
@@ -561,8 +549,8 @@ msgid "Media Entry Points"
 msgstr "Media Entry Points"
 
 msgctxt "#31806"
-msgid "Custom Favourites"
-msgstr "Custom Favorites"
+msgid "Home Customization"
+msgstr "Home Customization"
 
 msgctxt "#31807"
 msgid "Support"
@@ -573,8 +561,8 @@ msgid "Home Screen"
 msgstr "Home Screen"
 
 msgctxt "#31851"
-msgid "Intro file:"
-msgstr "Intro file:"
+msgid "Intro file"
+msgstr "Intro file"
 
 msgctxt "#31852"
 msgid "Use Startup playlist"
