--- a/language/resource.language.en_nz/strings.po
+++ b/language/resource.language.en_nz/strings.po
@@ -9,11 +9,11 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: English (Australia) (http://www.transifex.com/projects/p/xbmc-skins/language/en_AU/)\n"
+"Language-Team: English (New Zealand) (http://www.transifex.com/projects/p/xbmc-skins/language/en_NZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_AU\n"
+"Language: en_NZ\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#31026"
@@ -88,17 +88,9 @@ msgctxt "#31135"
 msgid "Details"
 msgstr "Details"
 
-msgctxt "#31226"
-msgid "CDDB"
-msgstr "CDDB"
-
 msgctxt "#31227"
 msgid "Playlist Editor"
 msgstr "Playlist Editor"
-
-msgctxt "#31229"
-msgid "Rating"
-msgstr "Rating"
 
 msgctxt "#31230"
 msgid "Artist:"
@@ -127,10 +119,6 @@ msgstr "Play custom playlist at startup."
 msgctxt "#31303"
 msgid "Location of custom startup playlist."
 msgstr "Location of custom startup playlist."
-
-msgctxt "#31304"
-msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
-msgstr "Don't show Screen settings menus (know as side bar menu in some skins)."
 
 msgctxt "#31305"
 msgid "Select when to show scrollbar."
@@ -162,7 +150,7 @@ msgstr "Show current weather outlook on home screen."
 
 msgctxt "#31314"
 msgid "Location of custom image to use as a watermark on home screen (only on Horizontal home menu type)."
-msgstr "Location of custom image to use as a watermark on home screen (only on Horizontal home menu type)."
+msgstr "Location of custom image to use as a watermark on home screen (only on Horisontal home menu type)."
 
 msgctxt "#31315"
 msgid "Type of image(s) to use on Movie shelf (On Horizontal or Icon menu type only)."
@@ -180,13 +168,9 @@ msgctxt "#31318"
 msgid "Type of image(s) to use on Music shelf (On Horizontal or Icon menu type only)."
 msgstr "Type of image(s) to use on Music shelf (On Horizontal or Icon menu type only)."
 
-msgctxt "#31319"
-msgid "Type of image(s) to use on Add-ons shelf (On Horizontal or Icon menu type only)."
-msgstr "Type of image(s) to use on Add-ons shelf (On Horizontal or Icon menu type only)."
-
 msgctxt "#31321"
-msgid "Type of Home menu type to use on home menu screen."
-msgstr "Type of Home menu type to use on home menu screen."
+msgid "Type of Home menu to use on home menu screen."
+msgstr "Type of Home menu to use on home menu screen."
 
 msgctxt "#31322"
 msgid "Show 'Videos' item in home menu."
@@ -268,10 +252,6 @@ msgctxt "#31345"
 msgid "Location of custom weather condition background images to use in weather screen."
 msgstr "Location of custom weather condition background images to use in weather screen."
 
-msgctxt "#31346"
-msgid "Set level of visibilty of background image."
-msgstr "Set level of visibilty of background image."
-
 msgctxt "#31350"
 msgid "Set location to enter Movie library when Movie item selected on home menu screen."
 msgstr "Set location to enter Movie library when Movie item selected on home menu screen."
@@ -297,8 +277,8 @@ msgid "Set location to enter Broadcast Radio library when Radio item selected on
 msgstr "Set location to enter Broadcast Radio library when Radio item selected on home menu screen."
 
 msgctxt "#31360"
-msgid "Sub menu to assign custom favourites to menu items."
-msgstr "Sub menu to assign custom favourites to menu items."
+msgid "Sub menu to assign custom shortcuts to home menu items."
+msgstr "Sub menu to assign custom shortcuts to home menu items."
 
 msgctxt "#31370"
 msgid "Use Debug log uploader script to post a debug log ('Full' debug logging must be turned on before log can be posted)."
@@ -316,13 +296,13 @@ msgctxt "#31373"
 msgid "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
 msgstr "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
 
+msgctxt "#31374"
+msgid "Click shortcut button to assign home screen shortcut."
+msgstr "Click shortcut button to assign home screen shortcut."
+
 msgctxt "#31528"
 msgid "Currently"
 msgstr "Currently"
-
-msgctxt "#31530"
-msgid "Location"
-msgstr "Location"
 
 msgctxt "#31531"
 msgid "Last Updated"
@@ -331,14 +311,6 @@ msgstr "Last Updated"
 msgctxt "#31536"
 msgid "Provider"
 msgstr "Provider"
-
-msgctxt "#31551"
-msgid "Static Icons"
-msgstr "Static Icons"
-
-msgctxt "#31552"
-msgid "Animated Icons"
-msgstr "Animated Icons"
 
 msgctxt "#31553"
 msgid "Custom backgrounds"
@@ -352,10 +324,6 @@ msgctxt "#31556"
 msgid "Skin"
 msgstr "Skin"
 
-msgctxt "#31557"
-msgid "Screen Settings"
-msgstr "Screen Settings"
-
 msgctxt "#31558"
 msgid "Power Menu"
 msgstr "Power Menu"
@@ -363,14 +331,6 @@ msgstr "Power Menu"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "System Info"
-
-msgctxt "#31560"
-msgid "Item Settings"
-msgstr "Item Settings"
-
-msgctxt "#31561"
-msgid "3D Settings"
-msgstr "3D Settings"
 
 msgctxt "#31562"
 msgid "View:"
@@ -468,10 +428,6 @@ msgctxt "#31689"
 msgid "Edit Library"
 msgstr "Edit Library"
 
-msgctxt "#31691"
-msgid "You might also enjoy"
-msgstr "You might also enjoy"
-
 msgctxt "#31692"
 msgid "Cinema"
 msgstr "Cinema"
@@ -482,23 +438,15 @@ msgstr "More..."
 
 msgctxt "#31696"
 msgid "Video Addons"
-msgstr "Video Add-ons"
+msgstr "Video Addons"
 
 msgctxt "#31697"
 msgid "Music Addons"
-msgstr "Music Add-ons"
+msgstr "Music Addons"
 
 msgctxt "#31700"
 msgid "Available Groups"
 msgstr "Available Groups"
-
-msgctxt "#31701"
-msgid "Play TV"
-msgstr "Play TV"
-
-msgctxt "#31702"
-msgid "Play Radio"
-msgstr "Play Radio"
 
 msgctxt "#31703"
 msgid "Play"
@@ -508,37 +456,9 @@ msgctxt "#31706"
 msgid "Advanced Channel Rules"
 msgstr "Advanced Channel Rules"
 
-msgctxt "#31707"
-msgid "Search TV"
-msgstr "Search TV"
-
-msgctxt "#31708"
-msgid "Search Radio"
-msgstr "Search Radio"
-
 msgctxt "#31709"
 msgid "TV Guide"
 msgstr "TV Guide"
-
-msgctxt "#31710"
-msgid "Radio Guide"
-msgstr "Radio Guide"
-
-msgctxt "#31711"
-msgid "TV Recordings"
-msgstr "TV Recordings"
-
-msgctxt "#31712"
-msgid "Radio Recordings"
-msgstr "Radio Recordings"
-
-msgctxt "#31713"
-msgid "TV Timers"
-msgstr "TV Timers"
-
-msgctxt "#31714"
-msgid "Radio Timers"
-msgstr "Radio Timers"
 
 msgctxt "#31801"
 msgid "Startup"
@@ -561,8 +481,8 @@ msgid "Media Entry Points"
 msgstr "Media Entry Points"
 
 msgctxt "#31806"
-msgid "Custom Favourites"
-msgstr "Custom Favourites"
+msgid "Home Customization"
+msgstr "Home Customization"
 
 msgctxt "#31807"
 msgid "Support"
@@ -573,8 +493,8 @@ msgid "Home Screen"
 msgstr "Home Screen"
 
 msgctxt "#31851"
-msgid "Intro file:"
-msgstr "Intro file:"
+msgid "Intro file"
+msgstr "Intro file"
 
 msgctxt "#31852"
 msgid "Use Startup playlist"
@@ -583,18 +503,6 @@ msgstr "Use Startup playlist"
 msgctxt "#31853"
 msgid "Choose playlist:"
 msgstr "Choose playlist:"
-
-msgctxt "#31854"
-msgid "Startup screen"
-msgstr "Startup screen"
-
-msgctxt "#31855"
-msgid "Blank"
-msgstr "Blank"
-
-msgctxt "#31856"
-msgid "Skin Image"
-msgstr "Skin Image"
 
 msgctxt "#31857"
 msgid "Custom Image"
@@ -628,17 +536,9 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Use Artistslideshow as background"
 
-msgctxt "#31866"
-msgid "Weather backgrounds"
-msgstr "Weather backgrounds"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "Background visibilty"
-
-msgctxt "#31869"
-msgid "Show Media case"
-msgstr "Show Media case"
 
 msgctxt "#31871"
 msgid "Choose Homescreen Watermark Image"
@@ -648,25 +548,13 @@ msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "Reset Homescreen Watermark Image"
 
-msgctxt "#31873"
-msgid "Weather icons"
-msgstr "Weather icons"
-
 msgctxt "#31875"
 msgid "Always"
 msgstr "Always"
 
-msgctxt "#31876"
-msgid "On scroll or focus"
-msgstr "On scroll or focus"
-
 msgctxt "#31877"
 msgid "Never"
 msgstr "Never"
-
-msgctxt "#31880"
-msgid "Lock Screen settings menus"
-msgstr "Lock Screen settings menus"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -726,7 +614,7 @@ msgstr "Music in Home menu"
 
 msgctxt "#31906"
 msgid "Addons in Home menu"
-msgstr "Add-ons in Home menu"
+msgstr "Addons in Home menu"
 
 msgctxt "#31907"
 msgid "Pictures in Home menu"
@@ -764,10 +652,6 @@ msgctxt "#31920"
 msgid "Movie library entry point"
 msgstr "Movie library entry point"
 
-msgctxt "#31921"
-msgid "TVShow library entry point"
-msgstr "TVShow library entry point"
-
 msgctxt "#31922"
 msgid "Music Video library entry point"
 msgstr "Music Video library entry point"
@@ -775,14 +659,6 @@ msgstr "Music Video library entry point"
 msgctxt "#31923"
 msgid "Music library entry point"
 msgstr "Music library entry point"
-
-msgctxt "#31924"
-msgid "TV entry point"
-msgstr "TV entry point"
-
-msgctxt "#31925"
-msgid "Radio entry point"
-msgstr "Radio entry point"
 
 msgctxt "#31930"
 msgid "Upload Debug Log file"
@@ -799,14 +675,6 @@ msgstr "Show Debug Info"
 msgctxt "#31935"
 msgid "Reset Skin settings to their defaults"
 msgstr "Reset Skin settings to their defaults"
-
-msgctxt "#31939"
-msgid "Shelf images"
-msgstr "Shelf images"
-
-msgctxt "#31940"
-msgid "Shelf icon type"
-msgstr "Shelf icon type"
 
 msgctxt "#31941"
 msgid "List"
@@ -835,10 +703,6 @@ msgstr "Banner"
 msgctxt "#31947"
 msgid "Logos"
 msgstr "Logos"
-
-msgctxt "#31948"
-msgid "Clearart"
-msgstr "Clearart"
 
 msgctxt "#31949"
 msgid "Banners"
