--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -216,69 +216,7 @@ msgctxt "#31321"
 msgid "Type of Home menu to use on home menu screen."
 msgstr ""
 
-msgctxt "#31322"
-msgid "Show 'Videos' item in home menu."
-msgstr ""
-
-msgctxt "#31323"
-msgid "Show 'Movies' item in home menu."
-msgstr ""
-
-msgctxt "#31324"
-msgid "Show 'TVShows' item in home menu."
-msgstr ""
-
-msgctxt "#31325"
-msgid "Show 'Music Videos' item in home menu."
-msgstr ""
-
-#empty strings id 31326-31327.
-
-msgctxt "#31328"
-msgid "Show 'Music' item in home menu."
-msgstr ""
-
-msgctxt "#31329"
-msgid "Show 'Addons' item in home menu."
-msgstr ""
-
-msgctxt "#31330"
-msgid "Show 'Pictures' item in home menu."
-msgstr ""
-
-msgctxt "#31331"
-msgid "Show User 'Profiles' item in home menu."
-msgstr ""
-
-msgctxt "#31332"
-msgid "Show 'Weather' item in home menu."
-msgstr ""
-
-msgctxt "#31333"
-msgid "Show User 'Favourites' item in home menu."
-msgstr ""
-
-msgctxt "#31334"
-msgid "Show 'Search' item in home menu."
-msgstr ""
-
-msgctxt "#31335"
-msgid "Show 'Play Disc' item in home menu."
-msgstr ""
-
-msgctxt "#31336"
-msgid "Show 'Quit' item in home menu."
-msgstr ""
-
-msgctxt "#31337"
-msgid "Select action of Quit home menu item in home menu screen."
-msgstr ""
-
-msgctxt "#31338"
-msgid "Show 'Filemanager' item in home menu."
-msgstr ""
-
-#empty strings id 312339 reserved for future use.
+#empty strings id 31322-31339.
 
 msgctxt "#31340"
 msgid "Location of custom skin background image."
@@ -300,9 +238,7 @@ msgctxt "#31344"
 msgid "Use Artistslideshow script to provide Music Artist FanArt image if available as skin background image."
 msgstr ""
 
-msgctxt "#31345"
-msgid "Location of custom weather condition background images to use in weather screen."
-msgstr ""
+#empty string 31345
 
 msgctxt "#31346"
 msgid "Set level of visibilty of background image."
@@ -333,7 +269,7 @@ msgid "Set location to enter Broadcast Radio library when Radio item selected on
 msgstr ""
 
 msgctxt "#31360"
-msgid "Sub menu to assign custom shortcuts to home menu items."
+msgid "Sub menu to assign custom shortcuts and change visible state of home menu items."
 msgstr ""
 
 msgctxt "#31370"
