Further changes for Home Menu settings.
Home menu settings screen now handles all three home menu types.

--- a/language/resource.language.en_au/strings.po
+++ b/language/resource.language.en_au/strings.po
@@ -140,6 +140,10 @@ msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr "Display a media case around Album or Video cover icon."
 
+msgctxt "#31309"
+msgid "Letterbar allows user to click first letter of media item name to navigate to library starting at clicked letter. Sorry, English only."
+msgstr "Letterbar allows user to click first letter of media item name to navigate to library starting at clicked letter. Sorry, English only."
+
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
 msgstr "Use Artwork Download script to download additional media images for All library media items."
@@ -180,62 +184,6 @@ msgctxt "#31321"
 msgid "Type of Home menu to use on home menu screen."
 msgstr "Type of Home menu to use on home menu screen."
 
-msgctxt "#31322"
-msgid "Show 'Videos' item in home menu."
-msgstr "Show 'Videos' item in home menu."
-
-msgctxt "#31323"
-msgid "Show 'Movies' item in home menu."
-msgstr "Show 'Movies' item in home menu."
-
-msgctxt "#31324"
-msgid "Show 'TVShows' item in home menu."
-msgstr "Show 'TVShows' item in home menu."
-
-msgctxt "#31325"
-msgid "Show 'Music Videos' item in home menu."
-msgstr "Show 'Music Videos' item in home menu."
-
-msgctxt "#31328"
-msgid "Show 'Music' item in home menu."
-msgstr "Show 'Music' item in home menu."
-
-msgctxt "#31329"
-msgid "Show 'Addons' item in home menu."
-msgstr "Show 'Addons' item in home menu."
-
-msgctxt "#31330"
-msgid "Show 'Pictures' item in home menu."
-msgstr "Show 'Pictures' item in home menu."
-
-msgctxt "#31331"
-msgid "Show User 'Profiles' item in home menu."
-msgstr "Show User 'Profiles' item in home menu."
-
-msgctxt "#31332"
-msgid "Show 'Weather' item in home menu."
-msgstr "Show 'Weather' item in home menu."
-
-msgctxt "#31333"
-msgid "Show User 'Favourites' item in home menu."
-msgstr "Show User 'Favourites' item in home menu."
-
-msgctxt "#31334"
-msgid "Show 'Search' item in home menu."
-msgstr "Show 'Search' item in home menu."
-
-msgctxt "#31335"
-msgid "Show 'Play Disc' item in home menu."
-msgstr "Show 'Play Disc' item in home menu."
-
-msgctxt "#31336"
-msgid "Show 'Quit' item in home menu."
-msgstr "Show 'Quit' item in home menu."
-
-msgctxt "#31337"
-msgid "Select action of Quit home menu item in home menu screen."
-msgstr "Select action of Quit home menu item in home menu screen."
-
 msgctxt "#31340"
 msgid "Location of custom skin background image."
 msgstr "Location of custom skin background image."
@@ -255,10 +203,6 @@ msgstr "Use Playing video or Music visualisation if available as skin background
 msgctxt "#31344"
 msgid "Use Artistslideshow script to provide Music Artist FanArt image if available as skin background image."
 msgstr "Use Artistslideshow script to provide Music Artist FanArt image if available as skin background image."
-
-msgctxt "#31345"
-msgid "Location of custom weather condition background images to use in weather screen."
-msgstr "Location of custom weather condition background images to use in weather screen."
 
 msgctxt "#31346"
 msgid "Set level of visibilty of background image."
@@ -289,8 +233,8 @@ msgid "Set location to enter Broadcast Radio library when Radio item selected on
 msgstr "Set location to enter Broadcast Radio library when Radio item selected on home menu screen."
 
 msgctxt "#31360"
-msgid "Sub menu to assign custom shortcuts to home menu items."
-msgstr "Sub menu to assign custom shortcuts to home menu items."
+msgid "Sub menu to assign custom shortcuts and change visible state of home menu items."
+msgstr "Sub menu to assign custom shortcuts and change visible state of home menu items."
 
 msgctxt "#31370"
 msgid "Use Debug log uploader script to post a debug log ('Full' debug logging must be turned on before log can be posted)."
@@ -307,6 +251,10 @@ msgstr "Turn on debug grid overlay to help users locate on screen skin items."
 msgctxt "#31373"
 msgid "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
 msgstr "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
+
+msgctxt "#31374"
+msgid "Click shortcut button to assign home screen shortcut."
+msgstr "Click shortcut button to assign home screen shortcut."
 
 msgctxt "#31528"
 msgid "Currently"
@@ -668,6 +616,14 @@ msgctxt "#31883"
 msgid "Use media overlays"
 msgstr "Use media overlays"
 
+msgctxt "#31884"
+msgid "Use letterbar"
+msgstr "Use letterbar"
+
+msgctxt "#31885"
+msgid "Idle animation delay"
+msgstr "Idle animation delay"
+
 msgctxt "#31886"
 msgid "Tilt icons"
 msgstr "Tilt icons"
@@ -745,8 +701,8 @@ msgid "Quit from Home menu"
 msgstr "Quit from Home menu"
 
 msgctxt "#31914"
-msgid "Quit button action"
-msgstr "Quit button action"
+msgid "Quit action"
+msgstr "Quit action"
 
 msgctxt "#31920"
 msgid "Movie library entry point"
@@ -775,6 +731,10 @@ msgstr "Radio entry point"
 msgctxt "#31930"
 msgid "Upload Debug Log file"
 msgstr "Upload Debug Log file"
+
+msgctxt "#31932"
+msgid "Enable Skin debug logging"
+msgstr "Enable Skin debug logging"
 
 msgctxt "#31933"
 msgid "Show Debug Grid"
