--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -210,7 +210,7 @@ msgctxt "#31319"
 msgid "Type of image(s) to use on Add-ons shelf (On Horizontal or Icon menu type only)."
 msgstr ""
 
-#empty string id 312320 reserved for future use.
+#empty string id 312320.
 
 msgctxt "#31321"
 msgid "Type of Home menu to use on home menu screen."
@@ -270,6 +270,10 @@ msgstr ""
 
 msgctxt "#31360"
 msgid "Sub menu to assign custom shortcuts and change visible state of home menu items."
+msgstr ""
+
+msgctxt "#31369"
+msgid "Turn on Skin debug logging."
 msgstr ""
 
 msgctxt "#31370"
@@ -580,9 +584,7 @@ msgctxt "#31805"
 msgid "Media Entry Points"
 msgstr ""
 
-msgctxt "#31806"
-msgid "Home Customization"
-msgstr ""
+#empty string id 31806
 
 msgctxt "#31807"
 msgid "Support"
@@ -790,67 +792,13 @@ msgctxt "#31900"
 msgid "Home menu type"
 msgstr ""
 
-msgctxt "#31901"
-msgid "Videos in Home menu"
-msgstr ""
-
-msgctxt "#31902"
-msgid "Movies in Home menu"
-msgstr ""
-
-msgctxt "#31903"
-msgid "TV Shows in Home menu"
-msgstr ""
-
-msgctxt "#31904"
-msgid "Music Videos in Home menu"
-msgstr ""
-
-msgctxt "#31905"
-msgid "Music in Home menu"
-msgstr ""
-
-msgctxt "#31906"
-msgid "Addons in Home menu"
-msgstr ""
-
-msgctxt "#31907"
-msgid "Pictures in Home menu"
-msgstr ""
-
-msgctxt "#31908"
-msgid "Profiles in Home menu"
-msgstr ""
-
-msgctxt "#31909"
-msgid "Weather in Home menu"
-msgstr ""
-
-msgctxt "#31910"
-msgid "Favourites in Home menu"
-msgstr ""
-
-msgctxt "#31911"
-msgid "Search in Home menu"
-msgstr ""
-
-msgctxt "#31912"
-msgid "Play Disc in Home menu"
-msgstr ""
-
-msgctxt "#31913"
-msgid "Quit from Home menu"
-msgstr ""
+#empty strings from id 31901 to 31913
 
 msgctxt "#31914"
-msgid "Quit button action"
+msgid "Quit action"
 msgstr ""
 
-msgctxt "#31915"
-msgid "Filemanager in Home menu"
-msgstr ""
-
-#empty strings from id 31916 to 31919
+#empty strings from id 31915 to 31919
 
 msgctxt "#31920"
 msgid "Movie library entry point"
@@ -882,7 +830,11 @@ msgctxt "#31930"
 msgid "Upload Debug Log file"
 msgstr ""
 
-#empty strings from id 31931 to 31932
+#empty string id 31931
+
+msgctxt "#31932"
+msgid "Enable Skin debug logging"
+msgstr ""
 
 msgctxt "#31933"
 msgid "Show Debug Grid"
