Add "Reboot to NAND" to power menu and quit action

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -335,7 +335,9 @@ msgctxt "#31553"
 msgid "Custom backgrounds"
 msgstr ""
 
-#empty string 31554
+msgctxt "#31554"
+msgid "Reboot to NAND"
+msgstr ""
 
 msgctxt "#31555"
 msgid "Profiles"
