Update changelog to reflect current state of the skin.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,19 @@
-[B]1.3.7[/B]
+[B]1.4.0[/B]
 - Major refactor of skin settings menus. Have now removed fake Spin controls from skin settings menu,
   replaced with a selection dialog instead.
+- Home menu settings are now Graphical in nature. Button in top right selects type of home screen and then displays apropriate
+  home screen.  Clicking menu items will display a dialog to hide/show and assign content as required.
 - Add option to change time before idle animation appears in video list view to screen settings menu.
 - Various changes to allow FlatLite theme to take on a more AppleTV Gen 4 look.
 - Various tweaks to Home shelf to allow a more AppleTV Gen 4 look in the FlatLite theme.
+- Numerous cosmetic changes to views code. A number of views now have a more AppleTV gen 4 feel, particularly when using Flatlite theme.
 - Renamed the System menu to Settings as this name more correctly matches the actual function of the menu.
 - Removed Filemanager from System menu and added an option to display on home menu.
 - Added a option to navigate in media views via a letter bar. Clicking the letter in the bar should move the focus to the media
-  items with the selected first letter in there names.
+  items with the selected first letter in there names. Sorry as this uses JumpSMS function to jump to selected letter, bar is English only.
 - Support for animated Posters and backgrounds in Video library Movie node.
-- Added numeric unwatched indictors (red dot with number inside) in various places thruout the skin. 
+- Added numeric unwatched indictors (red dot with number inside) in various places thruout the skin.
+- Added support to Power menu and Quit button on home screen for Android "Reboot to NAND".
 - Numerous minor code cleanups and bug fixes.
 
 [B]1.3.5[/B]
