Remove skin dependancy on a number of scripts.
Autoload required scripts only after asking user if they would like to
active required script for current action. Allows users to unload
scripts if they no longer need provided functionality. Much better Kodi
system friendliness, while providing script if user requires selected
action.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,12 +1,16 @@
-[B]1.4.0[/B]
+[B]1.4.2[/B]
+- Remove requirements for additional scripts from addons.xml file by asking user if they would like to autoload script required for selected action. 
+  Skin helper service addon is still a skin dependancy as so heavily used to provide basic functionality within the skin.
 - Major refactor of skin settings menus. Have now removed fake Spin controls from skin settings menu,
   replaced with a selection dialog instead.
+- Add additional theme 'Lite' to skin.  Light coloured backgrounds with old style icons. Provides a more AppleTV gen 4 look while retaining orginal icons.
+- Add 'Icon' view to music library.
 - Home menu settings are now Graphical in nature. Button in top right selects type of home screen and then displays apropriate
   home screen.  Clicking menu items will display a dialog to hide/show and assign content as required.
 - Add option to change time before idle animation appears in video list view to screen settings menu.
 - Various changes to allow FlatLite theme to take on a more AppleTV Gen 4 look.
-- Various tweaks to Home shelf to allow a more AppleTV Gen 4 look in the FlatLite theme.
-- Numerous cosmetic changes to views code. A number of views now have a more AppleTV gen 4 feel, particularly when using Flatlite theme.
+- Various tweaks to Home shelf to allow a more AppleTV Gen 4 look in the 'FlatLite' and 'Lite' themes.
+- Numerous cosmetic changes to views code. A number of views now have a more AppleTV gen 4 feel, particularly when using 'Flatlite' and 'Lite' themes.
 - Renamed the System menu to Settings as this name more correctly matches the actual function of the menu.
 - Removed Filemanager from System menu and added an option to display on home menu.
 - Added a option to navigate in media views via a letter bar. Clicking the letter in the bar should move the focus to the media
