Numerous minor code cleanups

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
-[B]1.4.2[/B]
+[B]1.4.3[/B]
+- Update Music info screens to match look and feel of Video info screens
 - Remove requirements for additional scripts from addons.xml file by asking user if they would like to autoload script required for selected action. 
   Skin helper service addon is still a skin dependancy as so heavily used to provide basic functionality within the skin.
 - Major refactor of skin settings menus. Have now removed fake Spin controls from skin settings menu,
@@ -8,7 +9,7 @@
 - Home menu settings are now Graphical in nature. Button in top right selects type of home screen and then displays apropriate
   home screen.  Clicking menu items will display a dialog to hide/show and assign content as required.
 - Add option to change time before idle animation appears in video list view to screen settings menu.
-- Various changes to allow FlatLite theme to take on a more AppleTV Gen 4 look.
+- Various changes to allow FlatLite and Lite theme to take on a more AppleTV Gen 4 look.
 - Various tweaks to Home shelf to allow a more AppleTV Gen 4 look in the 'FlatLite' and 'Lite' themes.
 - Numerous cosmetic changes to views code. A number of views now have a more AppleTV gen 4 feel, particularly when using 'Flatlite' and 'Lite' themes.
 - Renamed the System menu to Settings as this name more correctly matches the actual function of the menu.
