Initial changes for Broadcast shelf images

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -210,7 +210,10 @@ msgctxt "#31319"
 msgid "Type of image(s) to use on Add-ons shelf (On Horizontal or Icon menu type only)."
 msgstr ""
 
-#empty string id 312320.
+msgctxt "#31320"
+msgid "Type of image(s) to use on Broadcast shelf (On Horizontal or Icon menu type only)."
+msgstr ""
+
 
 msgctxt "#31321"
 msgid "Type of Home menu to use on home menu screen."
@@ -929,6 +932,14 @@ msgctxt "#31956"
 msgid "NextAired"
 msgstr ""
 
+msgctxt "#31957"
+msgid "PVRChannels"
+msgstr ""
+
+msgctxt "#31958"
+msgid "LatestRecordings"
+msgstr ""
+
 #Shelficon headings
 
 msgctxt "#31960"
@@ -957,4 +968,12 @@ msgstr ""
 
 msgctxt "#31966"
 msgid "Recent Albums"
+msgstr ""
+
+msgctxt "#31967"
+msgid "Broadcast Channels"
+msgstr ""
+
+msgctxt "#31968"
+msgid "Latest Recordings"
 msgstr ""
