Add user selectable Broadcast icons to shelf area.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
-[B]1.4.3[/B]
+[B]1.4.5[/B]
+- Add Broadcast shelf images to Horizontal home menu.
 - Update Music info screens to match look and feel of Video info screens
 - Remove requirements for additional scripts from addons.xml file by asking user if they would like to autoload script required for selected action. 
   Skin helper service addon is still a skin dependancy as so heavily used to provide basic functionality within the skin.
