Major changes to customising home menu items
Still a number of minor issues to be fixed.  Now opens a new custom
dialog that allows user to further customise home menu items. User can
now select from a list of builtin commands to assign to home menu items.
And soon, playlists as well.

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -446,7 +446,11 @@ msgctxt "#31652"
 msgid "Favourites"
 msgstr ""
 
-#empty string with id 31653 to 31656
+msgctxt "#31653"
+msgid "Command"
+msgstr ""
+
+#empty string with id 31654 to 31656
 
 msgctxt "#31657"
 msgid "Local subtitle available"
@@ -458,7 +462,15 @@ msgctxt "#31659"
 msgid "Playlist"
 msgstr ""
 
-#empty strings from id 31660 to 31679
+msgctxt "#31660"
+msgid "Kodi Playlist"
+msgstr ""
+
+msgctxt "#31661"
+msgid "Skin Playlist"
+msgstr ""
+
+#empty strings from id 31662 to 31679
 
 msgctxt "#31680"
 msgid "Default Artwork Downloader"
@@ -849,7 +861,17 @@ msgctxt "#31935"
 msgid "Reset Skin settings to their defaults"
 msgstr ""
 
-#empty strings from id 31936 to 31938
+msgctxt "#31936"
+msgid "Clean library"
+msgstr ""
+
+msgctxt "#31937"
+msgid "Fullscreen"
+msgstr ""
+
+msgctxt "#31938"
+msgid "Action"
+msgstr ""
 
 msgctxt "#31939"
 msgid "Shelf images"
