Further work on home customisation dialog.
Most minor problems resolved. Only Playlist buttons now require work.

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -470,7 +470,19 @@ msgctxt "#31661"
 msgid "Skin Playlist"
 msgstr ""
 
-#empty strings from id 31662 to 31679
+msgctxt "#31662"
+msgid "Mute"
+msgstr ""
+
+msgctxt "#31663"
+msgid "Rip CD"
+msgstr ""
+
+msgctxt "#31664"
+msgid "Eject Disc"
+msgstr ""
+
+#empty strings from id 31665 to 31679
 
 msgctxt "#31680"
 msgid "Default Artwork Downloader"
@@ -837,7 +849,21 @@ msgctxt "#31925"
 msgid "Radio entry point"
 msgstr ""
 
-#empty strings from id 31925 to 31929
+msgctxt "#31926"
+msgid "Edit home menu item"
+msgstr ""
+
+msgctxt "#31927"
+msgid "Menu item type"
+msgstr ""
+
+msgctxt "#31928"
+msgid "Choose item type"
+msgstr ""
+
+msgctxt "#31929"
+msgid "Choose Command"
+msgstr ""
 
 msgctxt "#31930"
 msgid "Upload Debug Log file"
