String changes for Addons info screen

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -527,7 +527,9 @@ msgctxt "#31689"
 msgid "Edit Library"
 msgstr ""
 
-#empty string id 31690
+msgctxt "#31690"
+msgid "Recently updated"
+msgstr ""
 
 msgctxt "#31691"
 msgid "You might also enjoy"
@@ -1046,3 +1048,4 @@ msgstr ""
 msgctxt "#31968"
 msgid "Latest Recordings"
 msgstr ""
+
