Add skin settings backup and restore

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1049,3 +1049,11 @@ msgctxt "#31968"
 msgid "Latest Recordings"
 msgstr ""
 
+msgctxt "#31980"
+msgid "Backup the skin settings"
+msgstr ""
+
+msgctxt "#31981"
+msgid "Restore the skin settings"
+msgstr ""
+
