Add text strings for skin backup feature

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -295,6 +295,14 @@ msgctxt "#31374"
 msgid "Click shortcut button to assign home screen shortcut."
 msgstr ""
 
+msgctxt "#31375"
+msgid "Backup all skin settings to a zip file."
+msgstr ""
+
+msgctxt "#31376"
+msgid "Restore skin settings from previously saved zip file."
+msgstr ""
+
 #End Skin Help Setting strings
 
 #Begin weather strings 31526 - 31550
