Expand the types of shelf images for addons.
Also cut back on number of required images on weather shelf by using
variables with a multi image.

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1018,6 +1018,10 @@ msgctxt "#31958"
 msgid "LatestRecordings"
 msgstr ""
 
+msgctxt "#31959"
+msgid "PendingUpdates"
+msgstr ""
+
 #Shelficon headings
 
 msgctxt "#31960"
@@ -1054,6 +1058,14 @@ msgstr ""
 
 msgctxt "#31968"
 msgid "Latest Recordings"
+msgstr ""
+
+msgctxt "#31969"
+msgid "Recent Updates"
+msgstr ""
+
+msgctxt "#31970"
+msgid "Available Updates"
 msgstr ""
 
 msgctxt "#31980"
