Now allow shelf images for Addons and Favourites on horizontal home menu

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -219,7 +219,11 @@ msgctxt "#31321"
 msgid "Type of Home menu to use on home menu screen."
 msgstr ""
 
-#empty strings id 31322-31339.
+msgctxt "#31322"
+msgid "Type of image(s) to use on Custom shelf (On Horizontal or Icon menu type only)."
+msgstr ""
+
+#empty strings id 31323-31339.
 
 msgctxt "#31340"
 msgid "Location of custom skin background image."
@@ -681,7 +685,11 @@ msgctxt "#31815"
 msgid "Never show"
 msgstr ""
 
-#empty strings from id 31816 to 31850
+#empty strings from id 31816 to 31849
+
+msgctxt "#31850"
+msgid "Heading"
+msgstr ""
 
 msgctxt "#31851"
 msgid "Intro file"
