Skin settings screen cleanups

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -800,7 +800,7 @@ msgid "Genre icons"
 msgstr ""
 
 msgctxt "#31880"
-msgid "Lock Screen settings menus"
+msgid "Hide Screen settings menus"
 msgstr ""
 
 msgctxt "#31881"
