--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]1.4.7[/B]
+- All changes between 1.4.5 and start of work on Krypton versions of skin
+- Remove icon enteries from extras/skinsettings.xml file due to chages in skin helper script
+
 [B]1.4.5[/B]
 - Add Broadcast shelf images to Horizontal home menu.
 - Update Music info screens to match look and feel of Video info screens
