Add skin setting menu to install/configure optional addons

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: AppTV
 # Addon id: skin.apptv
-# Addon Provider: Wyrm|SamFisher
+# Addon Provider: Wyrm
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Skins\n"
@@ -213,7 +213,6 @@ msgstr ""
 msgctxt "#31320"
 msgid "Type of image(s) to use on Broadcast shelf (On Horizontal or Icon menu type only)."
 msgstr ""
-
 
 msgctxt "#31321"
 msgid "Type of Home menu to use on home menu screen."
@@ -446,7 +445,45 @@ msgctxt "#31578"
 msgid "Light"
 msgstr ""
 
-#empty strings from id 31579 to 31650
+#empty strings from id 31579 to 31589
+
+msgctxt "#31590"
+msgid "Music Artist Slideshow"
+msgstr ""
+
+msgctxt "#31591"
+msgid "Artwork Downloader"
+msgstr ""
+
+msgctxt "#31592"
+msgid "Text Auto Completion"
+msgstr ""
+
+msgctxt "#31593"
+msgid "Song Lyrics"
+msgstr ""
+
+msgctxt "#31594"
+msgid "Global Search"
+msgstr ""
+
+msgctxt "#31595"
+msgid "Image Resource Selection"
+msgstr ""
+
+msgctxt "#31596"
+msgid "Nextup Notification"
+msgstr ""
+
+msgctxt "#31597"
+msgid "Next Aired TVShows"
+msgstr ""
+
+msgctxt "#31598"
+msgid "Play Album"
+msgstr ""
+
+#empty strings from id 31599 to 31650
 #End system strings
 #Begin Misc. strings 31651 - 31800
 
