Further keyboard cleanups

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -445,7 +445,11 @@ msgctxt "#31578"
 msgid "Light"
 msgstr ""
 
-#empty strings from id 31579 to 31589
+#empty strings from id 31579 to 31588
+
+msgctxt "#31589"
+msgid "Install Auto complete addon"
+msgstr ""
 
 msgctxt "#31590"
 msgid "Music Artist Slideshow"
