Minor string changes

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -445,7 +445,11 @@ msgctxt "#31578"
 msgid "Light"
 msgstr ""
 
-#empty strings from id 31579 to 31588
+msgctxt "#31579"
+msgid "Regular"
+msgstr ""
+
+#empty strings from id 31580 to 31588
 
 msgctxt "#31589"
 msgid "Install Auto complete addon"
@@ -841,7 +845,7 @@ msgid "Genre icons"
 msgstr ""
 
 msgctxt "#31880"
-msgid "Hide Screen settings menus"
+msgid "Hide Screen settings menu"
 msgstr ""
 
 msgctxt "#31881"
