--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -274,8 +274,48 @@ msgctxt "#31355"
 msgid "Set location to enter Broadcast Radio library when Radio item selected on home menu screen."
 msgstr ""
 
+msgctxt "#31359"
+msgid "Additional addons to extend the usabilty of the skin."
+msgstr ""
+
 msgctxt "#31360"
 msgid "Sub menu to assign custom shortcuts and change visible state of home menu items."
+msgstr ""
+
+msgctxt "#31361"
+msgid "Script downloads and allows the display of additional artist fanart images for the currently playing song."
+msgstr ""
+
+msgctxt "#31362"
+msgid "Script to add additional item artwork not provided by the basic Kodi artwork downloader."
+msgstr ""
+
+msgctxt "#31363"
+msgid "Script adds a list of suggestions for current text entered in the on screen keyboard."
+msgstr ""
+
+msgctxt "#31364"
+msgid "Script allows user to download and display song lyrics for the currently playing song."
+msgstr ""
+
+msgctxt "#31365"
+msgid "Script provides a much improved search facility from the basic version supplied with Kodi."
+msgstr ""
+
+msgctxt "#31366"
+msgid "Script allows user to load custom icons and background images for use thruout the skin."
+msgstr ""
+
+msgctxt "#31367"
+msgid "Script gives user the option to play next episode of current TV show."
+msgstr ""
+
+msgctxt "#31368"
+msgid "Script used to provide a listing of upcomming TV episodes. User must still provide a link to the script via the skins home customisation screen."
+msgstr ""
+
+msgctxt "#31369"
+msgid "Script used to provide Play album capabilities."
 msgstr ""
 
 msgctxt "#31370"
