Cleanup of skin settings
Remove setting and strings that where not actually required

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -314,9 +314,7 @@ msgctxt "#31368"
 msgid "Script used to provide a listing of upcomming TV episodes. User must still provide a link to the script via the skins home customisation screen."
 msgstr ""
 
-msgctxt "#31369"
-msgid "Script used to provide Play album capabilities."
-msgstr ""
+#empty string from 31369
 
 msgctxt "#31370"
 msgid "Use Debug log uploader script to post a debug log ('Full' debug logging must be turned on before log can be posted)."
@@ -527,11 +525,7 @@ msgctxt "#31597"
 msgid "Next Aired TVShows"
 msgstr ""
 
-msgctxt "#31598"
-msgid "Play Album"
-msgstr ""
-
-#empty strings from id 31599 to 31650
+#empty strings from id 31598 to 31650
 #End system strings
 #Begin Misc. strings 31651 - 31800
 
