Fix typo in change log

--- a/changelog.txt
+++ b/changelog.txt
@@ -11,7 +11,7 @@ Kyrpton 'Tock' Release
 - Additional playlist files included with skin, fix issue where custom playlist home shortcuts not working as expected.
 - Add additional Default image types.
 - A number of conditions now make use of $EXP[] to reduce size of code and increase readablity.
-- Yet more work of Info screen look and feel unification.
+- Yet more work on Info screen look and feel unification.
 - Animated song lyric support.
 - Support of keyboard auto completion suggestions.
 - Skin settings screen refactor and cleanups. User can now install and configure optional scripts from settings menu.
