--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -597,7 +597,11 @@ msgctxt "#31667"
 msgid "Memory used"
 msgstr ""
 
-#empty strings from id 31668 to 31679
+msgctxt "#31668"
+msgid "Suggested"
+msgstr ""
+
+#empty strings from id 31669 to 31679
 
 msgctxt "#31680"
 msgid "Default Artwork Downloader"
