First take on extended cast info screen.
Also included are fixes to changing video play temp and PVR shelf
thumbs.

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -314,7 +314,9 @@ msgctxt "#31368"
 msgid "Script used to provide a listing of upcomming TV episodes. User must still provide a link to the script via the skins home customisation screen."
 msgstr ""
 
-#empty string from 31369
+msgctxt "#31369"
+msgid "Script allows user to load custom actor info screen."
+msgstr ""
 
 msgctxt "#31370"
 msgid "Use Debug log uploader script to post a debug log ('Full' debug logging must be turned on before log can be posted)."
@@ -525,7 +527,11 @@ msgctxt "#31597"
 msgid "Next Aired TVShows"
 msgstr ""
 
-#empty strings from id 31598 to 31650
+msgctxt "#31598"
+msgid "Extended Info"
+msgstr ""
+
+#empty strings from id 31599 to 31650
 #End system strings
 #Begin Misc. strings 31651 - 31800
 
