Inital support for Special features addon

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -932,7 +932,9 @@ msgctxt "#31890"
 msgid "Show touch/mouse controls"
 msgstr ""
 
-#empty strings id 31891
+msgctxt "#31891"
+msgid "Special Features"
+msgstr ""
 
 msgctxt "#31892"
 msgid "Use TV Tunes"
