Remove now unused help string
Script artwork.downloader is about to be marked broken in main repo.
Remove to resolve any user issue in the future.

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -286,9 +286,7 @@ msgctxt "#31361"
 msgid "Script downloads and allows the display of additional artist fanart images for the currently playing song."
 msgstr ""
 
-msgctxt "#31362"
-msgid "Script to add additional item artwork not provided by the basic Kodi artwork downloader."
-msgstr ""
+#empty string 31362
 
 msgctxt "#31363"
 msgid "Script adds a list of suggestions for current text entered in the on screen keyboard."
